@@ -1,3 +1,8 @@
+2004-06-02  Mike Kestner  <mkestner@ximian.com>
+
+	* generator/Field.cs : add field hiding, for manual impl.
+	* generator/StructBase.cs : support disable_new, for manual impl.
+
 2004-06-01  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* sample/CustomWidget.cs: Add custom widget sample.
